# python-app

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.rst  makenew.sh  pylintrc  pyproject.toml  setup.cfg
.circleci/: Dockerfile  config.yml  deploy.sh  envvars.sh  push.sh
.devcontainer/: devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: format.yml  main.yml  publish.yml  version.yml
makenew_python_app/: __init__.py  __main__.py  app.py  dependencies.py  lifecycle.py
makenew_python_app/server/: __init__.py  boot.py  config.py  server.py
