[tool.poetry]
name = "makenew-python-app"
version = "2.14.0"
description = "Package skeleton for a Python app."
authors = ["Evan Sosenko <razorx@evansosenko.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/makenew/python-app"
repository = "https://github.com/makenew/python-app"
include = ['poetry.lock']

[tool.poetry.dependencies]
python = "^3.10.0"
pinject = "^0.14.1"
pyhumps = "^3.0.2"
python-rapidjson = "^1.0.0"
structlog = "^21.1.0"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"
twine = "^4.0.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
